// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Aside > renders basic case correctly 1`] = `
"<aside class="hidden overflow-y-auto lg:block lg:max-h-[calc(100vh-var(--header-height))] lg:sticky lg:top-[--header-height] py-8 lg:px-4 lg:-mx-4">
  <div class="relative">
    <!--v-if-->
    <!--v-if-->
  </div>
</aside>"
`;

exports[`Aside > renders with props correctly 1`] = `
"<aside class="hidden overflow-y-auto lg:block lg:max-h-[calc(100vh-var(--header-height))] lg:sticky lg:top-[--header-height] py-8 lg:px-4 lg:-mx-4">
  <div class="relative">
    <!--v-if-->
    <div class="space-y-3 mb-3 lg:mb-6 -mx-1 lg:mx-0"><a class="flex items-center gap-1.5 lg:gap-2 group text-gray-500 dark:text-gray-400 hover:text-gray-700 dark:hover:text-gray-200 font-medium" href="/getting-started">
        <div class="rounded-md p-1 inline-flex ring-inset ring-1 bg-gray-100/50 dark:bg-gray-800/50 ring-gray-300 dark:ring-gray-700 group-hover:bg-primary group-hover:ring-primary group-hover:text-background"><span class="i-heroicons-book-open-solid w-4 h-4 flex-shrink-0"></span></div><span class="text-sm/6 relative">Documentation <!--v-if--></span>
      </a><a class="flex items-center gap-1.5 lg:gap-2 group text-gray-500 dark:text-gray-400 hover:text-gray-700 dark:hover:text-gray-200 font-medium" href="/playground">
        <div class="rounded-md p-1 inline-flex ring-inset ring-1 bg-gray-100/50 dark:bg-gray-800/50 ring-gray-300 dark:ring-gray-700 group-hover:bg-primary group-hover:ring-primary group-hover:text-background"><span class="i-simple-icons-stackblitz w-4 h-4 flex-shrink-0"></span></div><span class="text-sm/6 relative">Playground <!--v-if--></span>
      </a><a class="flex items-center gap-1.5 lg:gap-2 group text-gray-500 dark:text-gray-400 hover:text-gray-700 dark:hover:text-gray-200 font-medium" href="/roadmap">
        <div class="rounded-md p-1 inline-flex ring-inset ring-1 bg-gray-100/50 dark:bg-gray-800/50 ring-gray-300 dark:ring-gray-700 group-hover:bg-primary group-hover:ring-primary group-hover:text-background"><span class="i-heroicons-beaker w-4 h-4 flex-shrink-0"></span></div><span class="text-sm/6 relative">Roadmap <!--v-if--></span>
      </a><a class="flex items-center gap-1.5 lg:gap-2 group text-gray-500 dark:text-gray-400 hover:text-gray-700 dark:hover:text-gray-200 font-medium" href="/pro">
        <div class="rounded-md p-1 inline-flex ring-inset ring-1 bg-gray-100/50 dark:bg-gray-800/50 ring-gray-300 dark:ring-gray-700 group-hover:bg-primary group-hover:ring-primary group-hover:text-background"><span class="i-heroicons-square-3-stack-3d w-4 h-4 flex-shrink-0"></span></div><span class="text-sm/6 relative">Pro <!--v-if--></span>
      </a><a class="flex items-center gap-1.5 lg:gap-2 group text-gray-500 dark:text-gray-400 hover:text-gray-700 dark:hover:text-gray-200 font-medium" href="https://github.com/nuxt/ui/releases" rel="noopener noreferrer" target="_blank">
        <div class="rounded-md p-1 inline-flex ring-inset ring-1 bg-gray-100/50 dark:bg-gray-800/50 ring-gray-300 dark:ring-gray-700 group-hover:bg-primary group-hover:ring-primary group-hover:text-background"><span class="i-heroicons-rocket-launch w-4 h-4 flex-shrink-0"></span></div><span class="text-sm/6 relative">Releases <span class="i-heroicons-arrow-up-right-20-solid w-3 h-3 absolute top-0.5 -right-3.5 text-gray-400 dark:text-gray-500"></span></span>
      </a></div>
  </div>
</aside>"
`;

exports[`Aside > renders with slots correctly 1`] = `
"<aside class="hidden overflow-y-auto lg:block lg:max-h-[calc(100vh-var(--header-height))] lg:sticky lg:top-[--header-height] py-8 lg:px-4 lg:-mx-4">
  <div class="relative">
    <div class="sticky -top-8 -mt-8 pointer-events-none z-[1]">
      <div class="h-8 bg-background -mx-4 px-4"></div>
      <div class="bg-background relative pointer-events-auto flex -mx-4 px-4">topSlot</div>
      <div class="h-8 bg-gradient-to-b from-background -mx-4 px-4"></div>
    </div>linksSlotDefault SlotbottomSlot
  </div>
</aside>"
`;
